[gd_scene load_steps=8 format=3 uid="uid://b3y2g0hb75x84"]

[ext_resource type="Script" path="res://scenes/playgrounds/scripts/set_playground.gd" id="1_qpf3r"]
[ext_resource type="PackedScene" uid="uid://s4q8h48y8l4u" path="res://models/ball/ball.tscn" id="2_mu00q"]
[ext_resource type="PackedScene" uid="uid://c7ysh8prm1be3" path="res://models/player/player.tscn" id="3_ldg7w"]
[ext_resource type="PackedScene" uid="uid://b7qwq76fes3u1" path="res://models/banner/banner.tscn" id="4_jhfb8"]
[ext_resource type="PackedScene" uid="uid://c6e24b3cqp0o8" path="res://models/board/score_board.tscn" id="5_64j7l"]
[ext_resource type="PackedScene" uid="uid://bkjkijr8u0x32" path="res://models/tennis_set/tennis_set.tscn" id="6_5y8jw"]
[ext_resource type="PackedScene" uid="uid://c8hdbltbg80rl" path="res://bgm/bgm_player.tscn" id="7_lh0i8"]

[node name="SetPlayground" type="Node2D"]
script = ExtResource("1_qpf3r")

[node name="Ball" parent="." instance=ExtResource("2_mu00q")]
position = Vector2(259, 116)

[node name="PlayerHome" parent="." instance=ExtResource("3_ldg7w")]
position = Vector2(455, 296)

[node name="PlayerAway" parent="." instance=ExtResource("3_ldg7w")]
position = Vector2(239, 82)
home_or_away = "away"
color = Color(1, 0, 1, 1)

[node name="Banner" parent="." instance=ExtResource("4_jhfb8")]
position = Vector2(207, 185)

[node name="ScoreBoard" parent="." instance=ExtResource("5_64j7l")]
position = Vector2(499, 40)

[node name="TennisSet" parent="." instance=ExtResource("6_5y8jw")]

[node name="BGMPlayer" parent="." instance=ExtResource("7_lh0i8")]
